# zh-mistake-text-gen

./: .gitignore  README.md  example.py  pyproject.toml  start_doc.sh  test.py
docs/source/: conf.py  index.rst  zh_mistake_text_gen.rst
examples/: basic.py  group_weight.py  weight.py
tests/: test_exception.py  test_utils.py  test_zh_mistake_text_aug.py  test_zh_mistake_text_gen.py
zh_mistake_text_aug/: data_maker.py  data_model.py  high_freq_zh_char.txt
zh_mistake_text_gen/: __init__.py  data_maker.py  data_model.py  disable_words.txt  exception.py  pipeline.py  utils.py
